--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="container" style="display:flex;justify-content:space-between;align-items:center;padding:15px 0;">
             <div class="logo">nexco</div>
             <div class="contact">
-                <span style="font-size:1.2rem;">📱</span>
+                <span style="font-size:1.2rem;"></span>
                 <span style="margin-left:8px;">6281225681788</span>
             </div>
         </div>
@@ -208,7 +208,7 @@
                     <div class="order-summary">
                         <div class="summary-row">
                             <span>Harga per pcs:</span>
-                            <span id="unitPriceDisplay">Rp 185.000</span>
+                            <span id="unitPriceDisplay">Rp 285.000</span>
                         </div>
                         <div class="summary-row">
                             <span>Jumlah:</span>
@@ -216,7 +216,7 @@
                         </div>
                         <div class="summary-row">
                             <span>Subtotal:</span>
-                            <span id="subtotal">Rp 185.000</span>
+                            <span id="subtotal">Rp 285.000</span>
                         </div>
                         <div class="summary-row" id="ongkirRow">
                             <span>Ongkir:</span>
@@ -228,7 +228,7 @@
                         </div>
                         <div class="summary-row total">
                             <span>TOTAL PEMBAYARAN:</span>
-                            <span id="total">Rp 185.000</span>
+                            <span id="total">Rp 285.000</span>
                         </div>
                         
                 <div class="payment-methods">
@@ -238,20 +238,10 @@
                             <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='50' height='30' viewBox='0 0 50 30'%3E%3Crect width='50' height='30' rx='4' fill='%232563EB'/%3E%3Ctext x='25' y='18' text-anchor='middle' font-size='10' fill='white' font-weight='bold'%3EBANK%3C/text%3E%3C/svg%3E" alt="Bank Transfer">
                             <span>Transfer Bank</span>
                         </div>
-                        <div class="payment-option">
-                            <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='50' height='30' viewBox='0 0 50 30'%3E%3Crect width='50' height='30' rx='4' fill='%2310B981'/%3E%3Ctext x='25' y='18' text-anchor='middle' font-size='10' fill='white' font-weight='bold'%3ECOD%3C/text%3E%3C/svg%3E" alt="Cash on Delivery">
-                            <span>COD</span>
-                        </div>
-                        <div class="payment-option">
-                            <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='50' height='30' viewBox='0 0 50 30'%3E%3Crect width='50' height='30' rx='4' fill='%23EC4899'/%3E%3Ctext x='25' y='18' text-anchor='middle' font-size='9' fill='white' font-weight='bold'%3EE-WALLET%3C/text%3E%3C/svg%3E" alt="E-Wallet">
-                            <span>E-Wallet</span>
-                        </div>
-                    </div>
-                </div>
             
                     </div>
                     <button type="button" onclick="submitOrder()" class="whatsapp-btn">
-                        📱 Pesan via WhatsApp
+                         Pesan via WhatsApp
                     </button>
                 </form>
             </div>
