--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="logo">nexco</div>
             <div class="contact">
                 <span style="font-size:1.2rem;"></span>
-                <span style="margin-left:8px;">6281225681788</span>
+                <span style="margin-left:8px;">cs</span>
             </div>
         </div>
     </header>
@@ -223,7 +223,7 @@
                         </div>
                         <div class="summary-row">
                             <span>Kode Unik:</span>
-                            <span id="uniqueCode">+Rp 123</span>
+                            <span id="uniqueCode">+Rp 1023</span>
                         </div>
                         <div class="summary-row total">
                             <span>TOTAL PEMBAYARAN:</span>
@@ -240,7 +240,7 @@
             
                     </div>
                     <button type="button" onclick="submitOrder()" class="whatsapp-btn">
-                         Pesan via WhatsApp
+                         Pesan Sekarang
                     </button>
                 </form>
             </div>
@@ -251,7 +251,7 @@
             <script>
                 const indonesiaData = {"Jawa Barat":{"Bandung":["Cidadap","Cicendo","Coblong","Bandung Wetan"],"Bekasi":["Bekasi Barat","Bekasi Timur","Bekasi Selatan","Bekasi Utara"],"Bogor":["Bogor Tengah","Bogor Utara","Bogor Selatan","Bogor Timur"],"Depok":["Pancoran Mas","Sukmajaya","Sawangan","Cipayung"],"Cimahi":["Cimahi Selatan","Cimahi Tengah","Cimahi Utara"]},"DKI Jakarta":{"Jakarta Pusat":["Gambir","Tanah Abang","Menteng","Senen"],"Jakarta Selatan":["Kebayoran Baru","Tebet","Setiabudi","Mampang Prapatan"],"Jakarta Timur":["Matraman","Pulogadung","Jatinegara","Duren Sawit"],"Jakarta Barat":["Grogol Petamburan","Taman Sari","Tambora","Kebon Jeruk"],"Jakarta Utara":["Penjaringan","Pademangan","Tanjung Priok","Koja"]},"Jawa Tengah":{"Semarang":["Semarang Tengah","Semarang Utara","Semarang Selatan","Semarang Timur"],"Solo":["Laweyan","Serengan","Pasar Kliwon","Jebres"],"Yogyakarta":["Gondokusuman","Jetis","Tegalrejo","Umbulharjo"]},"Jawa Timur":{"Surabaya":["Genteng","Gubeng","Tegalsari","Wonokromo"],"Malang":["Klojen","Blimbing","Kedungkandang","Sukun"],"Sidoarjo":["Sidoarjo","Buduran","Candi","Porong"]},"Banten":{"Tangerang":["Tangerang Kota","Cipondoh","Karawaci","Pinang"],"Serang":["Serang Kota","Kasemen","Walantaka","Curug"]},"Bali":{"Denpasar":["Denpasar Barat","Denpasar Selatan","Denpasar Timur","Denpasar Utara"],"Badung":["Mengwi","Abiansemal","Petang","Kuta Utara"]},"Sumatera Utara":{"Medan":["Medan Kota","Medan Barat","Medan Timur","Medan Utara"],"Binjai":["Binjai Kota","Binjai Barat","Binjai Timur","Binjai Utara"]},"Sumatera Selatan":{"Palembang":["Ilir Barat I","Ilir Timur I","Seberang Ulu I","Kertapati"]},"Kalimantan Timur":{"Balikpapan":["Balikpapan Kota","Balikpapan Barat","Balikpapan Timur","Balikpapan Selatan"],"Samarinda":["Samarinda Kota","Samarinda Ulu","Samarinda Ilir","Sungai Kunjang"]},"Sulawesi Selatan":{"Makassar":["Makassar","Mariso","Mamajang","Tamalate"]}};
                 const ongkirFlat = {"Jawa Barat":{"tf":12000,"cod":18000},"DKI Jakarta":{"tf":15000,"cod":21000},"Jawa Tengah":{"tf":13000,"cod":19000},"Jawa Timur":{"tf":13000,"cod":19000},"Banten":{"tf":13000,"cod":19000},"Bali":{"tf":19000,"cod":25000},"Sumatera Utara":{"tf":25000,"cod":31000},"Sumatera Selatan":{"tf":25000,"cod":31000},"Kalimantan Timur":{"tf":35000,"cod":41000},"Sulawesi Selatan":{"tf":35000,"cod":41000}};
-                const PRODUCT_PRICE = 185000;
+                const PRODUCT_PRICE = 285000;
                 const productName = "Makeup Travel Bag with LED";
                 const whatsappNumber = "6281225681788";
                 let galleryImages = ["https://m.media-amazon.com/images/I/81WdtUODlIL.jpg","https://m.media-amazon.com/images/I/71D7XHeZQgL.jpg","https://m.media-amazon.com/images/I/81B8P2VEH+L.jpg","https://m.media-amazon.com/images/I/71aHpCQI6FL.jpg","https://m.media-amazon.com/images/I/81eRsovS1yL.jpg","https://m.media-amazon.com/images/I/71cVlrVz6rL.jpg","https://m.media-amazon.com/images/I/51tYhn6znCL._AC_.jpg","https://m.media-amazon.com/images/I/51-WuSZSaEL._AC_.jpg","https://m.media-amazon.com/images/I/510yBQagB7L._AC_.jpg","https://m.media-amazon.com/images/I/511uO8v7uuL._AC_.jpg","https://m.media-amazon.com/images/I/51BU9Io8TTL._AC_.jpg","https://m.media-amazon.com/images/I/515PR7LHcJL._AC_.jpg","https://m.media-amazon.com/images/I/41C+80KSrcL._AC_.jpg"];
