--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
             <div class="product-info">
                 <div class="product-title">Makeup Travel Bag with LED</div>
                 <div class="price">Rp 285.000</div>
-                <div class="desc">Kotak makeup portable dengan cermin LED 4K yang bisa diatur (dingin, hangat, natural), baterai 2000mAh, dan ruang penyimpanan luas. Terbuat dari bahan kulit tahan air, dilengkapi tempat kuas, kotak perhiasan, dan sekat yang bisa dilepas — praktis untuk sehari-hari atau dibawa traveling.</div>
-                <ul class="feature-list"><li>✔️ mengatasi masalah cahaya riasan rendah dengan mudah Cermin besar 4K mengisi ulang cahaya mengembalikan penampilan cantik Anda Tiga peralihan warna cahaya untuk menciptakan berbagai tampilan riasan</li></ul>
+                <div class="desc">Portable makeup case with adjustable 4K LED mirror (cool, warm, natural light), 2000mAh battery, and spacious storage. Made from waterproof leather, includes brush holder, jewelry box, and removable dividers — perfect for daily use or travel.</div>
+                <ul class="feature-list"><li>Easily solve poor lighting while doing makeup. The large 4K mirror brightens your face and brings out your natural beauty. Switch between three light modes (cool, warm, natural) to match any makeup look.</li></ul>
                 <form id="orderForm" autocomplete="off" onsubmit="return false;">
                     
                 <div class="variant-selection">
@@ -246,7 +246,7 @@
             </div>
         </div>
     </main>
-    <footer style="text-align:center; color:#7f8899; font-size:13px; margin:25px 0 15px 0;">&copy; 2025 nexco. Powered by nexcoAI.</footer>
+    <footer style="text-align:center; color:#7f8899; font-size:13px; margin:25px 0 15px 0;">&copy; Powered by nexco Copyright © 2025 </footer>
     
             <script>
                 const indonesiaData = {"Jawa Barat":{"Bandung":["Cidadap","Cicendo","Coblong","Bandung Wetan"],"Bekasi":["Bekasi Barat","Bekasi Timur","Bekasi Selatan","Bekasi Utara"],"Bogor":["Bogor Tengah","Bogor Utara","Bogor Selatan","Bogor Timur"],"Depok":["Pancoran Mas","Sukmajaya","Sawangan","Cipayung"],"Cimahi":["Cimahi Selatan","Cimahi Tengah","Cimahi Utara"]},"DKI Jakarta":{"Jakarta Pusat":["Gambir","Tanah Abang","Menteng","Senen"],"Jakarta Selatan":["Kebayoran Baru","Tebet","Setiabudi","Mampang Prapatan"],"Jakarta Timur":["Matraman","Pulogadung","Jatinegara","Duren Sawit"],"Jakarta Barat":["Grogol Petamburan","Taman Sari","Tambora","Kebon Jeruk"],"Jakarta Utara":["Penjaringan","Pademangan","Tanjung Priok","Koja"]},"Jawa Tengah":{"Semarang":["Semarang Tengah","Semarang Utara","Semarang Selatan","Semarang Timur"],"Solo":["Laweyan","Serengan","Pasar Kliwon","Jebres"],"Yogyakarta":["Gondokusuman","Jetis","Tegalrejo","Umbulharjo"]},"Jawa Timur":{"Surabaya":["Genteng","Gubeng","Tegalsari","Wonokromo"],"Malang":["Klojen","Blimbing","Kedungkandang","Sukun"],"Sidoarjo":["Sidoarjo","Buduran","Candi","Porong"]},"Banten":{"Tangerang":["Tangerang Kota","Cipondoh","Karawaci","Pinang"],"Serang":["Serang Kota","Kasemen","Walantaka","Curug"]},"Bali":{"Denpasar":["Denpasar Barat","Denpasar Selatan","Denpasar Timur","Denpasar Utara"],"Badung":["Mengwi","Abiansemal","Petang","Kuta Utara"]},"Sumatera Utara":{"Medan":["Medan Kota","Medan Barat","Medan Timur","Medan Utara"],"Binjai":["Binjai Kota","Binjai Barat","Binjai Timur","Binjai Utara"]},"Sumatera Selatan":{"Palembang":["Ilir Barat I","Ilir Timur I","Seberang Ulu I","Kertapati"]},"Kalimantan Timur":{"Balikpapan":["Balikpapan Kota","Balikpapan Barat","Balikpapan Timur","Balikpapan Selatan"],"Samarinda":["Samarinda Kota","Samarinda Ulu","Samarinda Ilir","Sungai Kunjang"]},"Sulawesi Selatan":{"Makassar":["Makassar","Mariso","Mamajang","Tamalate"]}};
